[package]
name = "dl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = "2.33.3"
# console = "0.14.1"
futures-util = "0.3.17"
indicatif = "0.16.2"
# lust = "0.1.1"
reqwest = { version = "0.11.3", features = ["stream"] }
tokio = { version = "1.11.0", features = ["full"] }
